--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Lasagna Recipe</h1>
-    <img src="https://images.unsplash.com/photo-1709429790175-b02bb1b19207?q=80&w=1332&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" width="250" alt="Image of a lasagna slice on a plate.">
+    <img src="https://images.unsplash.com/photo-1709429790175-b02bb1b19207?q=80&w=1332&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" height="250" width="250" alt="Image of a lasagna slice on a plate.">
     <h2>Ingredients</h2>
     <h3>For the Meat Sauce (Ragù)</h3>
         <ul>
@@ -23,7 +23,7 @@
             <li>1 cup (240 ml) beef broth or red wine</li>
             <li>1 tsp dried oregano</li>
             <li>1 tsp dried basil (or a few fresh leaves)</li>
-            <li>Salt & pepper to taste</li>
+            <li>Salt & pepper to taste</li> 
     </ul>
 
     <h3>For the Ricotta Layer</h3>
