Update index.html: Eliminated images of recipes and adjust h1 image dimensions for better layout

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Recipes</h1>
-    <img src="https://plus.unsplash.com/premium_photo-1663126351065-741a1d338b5d?q=80&w=1332&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" width="250" alt="Image of a variety of foods and ingredients on a table.">
+    <h1>Odin Recipes</h1>
+    <img src="https://plus.unsplash.com/premium_photo-1663126351065-741a1d338b5d?q=80&w=1332&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" height="300" width="300" alt="Image of a variety of foods and ingredients on a table.">
         <ul>
-            <img src="https://images.unsplash.com/photo-1709429790175-b02bb1b19207?q=80&w=1332&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" height="250" width="250" alt="Image of a lasagna slice on a plate.">
+            
             <li><a href="recipes/lasagna.html">Lasagna</a></li>
-            <img src="https://plus.unsplash.com/premium_photo-1739906794633-71adada97314?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" height="250" width="250" alt="Image of a grilled-cheese-sandwich.">
+
             <li><a href="recipes/grilled-cheese-sandwich.html">Grilled Cheese Sandwich</a></li>
-            <img src="https://images.unsplash.com/photo-1707870678076-40ba56a65ece?q=80&w=687&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" height="250" width="250" alt="Image of a bowl of mac and cheese.">
+
             <li><a href="recipes/mac-and-cheese.html">Mac and Cheese</a></li>
         </ul>
 </body>
